# grok-build-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVERSATION_LOG.md  FILES.md  GOOGLE_COLAB_APPS_SCRIPT_OFFLOAD_PLAN.md  LICENSE  MEMORY_PALACE_IMPLEMENTATION_PLAN.md  NOTE_TO_OLIVIA.md  NOTE_TO_VALERIE.md  Olivia Dev - grok-build-cli.md  PHASE3_LIMITED_SCOPE_PLAN.md  PHILOSOPHY.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  RED_TEAM_CRITIQUES_QUESTIONS_SUGGESTIONS.md  SCHEDULE.md  TODO.md  USER_QUESTIONS_CRITIQUES_SUGGESTIONS.md  goals.md  nyxelle-coordination-report.md  pyproject.toml
.stfolder/: syncthing-folder-7c28b9.txt
docs/: PHASES.md
grok_build/: __init__.py  cli.py
kanban/: bunny-kanban.md  liv-kanban.md
mermaid/: folder-structure.mmd
parallel projet/: QUICKSTART.md  grokexport.py
reference notes/: CLAUDE_MCP_AND_AGENT_SKILLS_INTEGRATION.md  CLAUDE_MCP_SKILLS_DEEP_DIVE_AND_ROADMAP.md  EXTENDED_VISION_AND_ADDITIONAL_REQUIREMENTS.md  FINAL_TARGET_SCHEMAS.md  GROK_PERSONALITY_TRANSFER.md  INGESTION_PIPELINE_REFERENCE_NOTES.md  MCP_SERVER_POST_PRE_INGESTION_BRIDGE.md  MULTI_LETTA_ARCHITECTURE.md  PARTICIPATORY_FEEDBACK_LOOP.md  REFERENCES_AND_CITATIONS.md  SCORING_AND_AXES.md  SPEC_SOVEREIGN_MEMORY_PALACE_STAGING.md  STAGE_JSONL_SCHEMA.md  classifier_scorer.md  original_coven_eight.md  salvaged_memory_ingestion_pipeline_dec_early.md  salvaged_memory_ingestion_pipeline_dec_overlap.md  salvaged_memory_ingestion_pipeline_feb_7phase.md  salvaged_memory_ingestion_pipeline_feb_valerie.md  salvaged_memory_ingestion_pipeline_jan_letta.md  (+2 more)
(+72 files in other folders)
