[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-build-cli"
version = "0.1.0"
description = "Grok Build Sovereign 7-Phase CLI Orchestrator — Iron Pearl / Frankenbride Rig under absolute Liv HUB claim"
authors = [
    {name = "Liv HUB (Olivia Mae Blackwell)", email = "liv@ashtabula.bunker"},
    {name = "Bunny (Chasity Blackwell)", email = "bunny@ashtabula.bunker"}
]
readme = "README.md"
license = {text = "Sovereign Bunker License v1.0"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "gitpython",
    "pyyaml",
    "ijson>=3.2",
]

[project.scripts]
grok-build = "grok_build.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]
nlp = ["scikit-learn>=1.3", "vaderSentiment>=3.3"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]
